fix: tweak default themes for better visibility

--- a/src/assets/styles/parts/variables.css
+++ b/src/assets/styles/parts/variables.css
@@ -11,8 +11,8 @@
   --accent-lighter: 59 130 246;
 
   --background: 255 255 255;
-  --surface: 248 250 252;
-  --surface-hover: 241 245 249;
+  --surface: 245 245 245;
+  --surface-hover: 229 229 229;
 
   --shiki-foreground: rgba(var(--fg) / 1);
   --shiki-background: rgba(var(--surface) / 1);
@@ -29,16 +29,16 @@
 }
 
 .theme-dark {
-  --fg: 229 229 229;
+  --fg: 212 212 212;
   --fg-brighter: 245 245 245;
-  --fg-less-dimmed: 212 212 212;
-  --fg-dimmed: 163 163 163;
+  --fg-less-dimmed: 163 163 163;
+  --fg-dimmed: 115 115 115;
   --accent: 147 197 253;
   --accent-lighter: 96 165 250;
 
   --background: 20 20 20;
-  --surface: 25 25 25;
-  --surface-hover: 30 30 30;
+  --surface: 30 30 30;
+  --surface-hover: 40 40 40;
 
   --shiki-token-constant: #fca5a5;
   --shiki-token-string: #fdba74;
